Colaboratory kullanılarak oluşturuldu

--- a/CelciusToFahrenheitPrediction.ipynb
+++ b/CelciusToFahrenheitPrediction.ipynb
@@ -6,7 +6,7 @@
       "name": "CelciusToFahrenheitPrediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMPg6LMw1nB+aZvwcdxrtEf",
+      "authorship_tag": "ABX9TyMqwfTQOyOuYHb1ZEYof8bB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,12 @@
         "id": "js5AqiMCDG-W"
       },
       "source": [
+        "#Importing Libraries\n",
         "import tensorflow as tf\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "from tensorflow import keras \n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense"
       ],
       "execution_count": 2,
       "outputs": []
@@ -46,23 +50,11 @@
         "id": "NRPox9KEE7vB"
       },
       "source": [
+        "#Creating the Training Data\n",
         "celsius_values = np.array([-40, -10, -5, -3.3, 0, 4.44, 8, 10, 15, 15.56, 22, 38], dtype=float)\n",
         "fahrenheit_values = np.array([-40, 14, 23, 26, 32, 40, 46, 50, 59, 60, 72, 100], dtype=float)"
       ],
       "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hSceBe8yFh87"
-      },
-      "source": [
-        "from tensorflow import keras \n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Dense"
-      ],
-      "execution_count": 4,
       "outputs": []
     },
     {
@@ -75,6 +67,7 @@
         "outputId": "ec4d3059-8125-4b9c-8c40-474a2b9366cf"
       },
       "source": [
+        "#Creating the Model\n",
         "model = Sequential()\n",
         "model.add(Dense(1))\n",
         "model.compile(loss='mean_squared_error', optimizer = keras.optimizers.Adam(0.1))\n",
@@ -100,6 +93,7 @@
         "id": "Zw4LD-zSLMxZ"
       },
       "source": [
+        "#Creating a Function to Compare Our Predicted Values with the Actual Values\n",
         "def Calculation(celsius):\n",
         "  return celsius * 9/5 + 32"
       ],
@@ -116,8 +110,10 @@
         "outputId": "a70b7684-b6f7-4daf-d61d-c9d8de319614"
       },
       "source": [
+        "#Creating a Variable to Ask User for Celsius Value to Find Its Fahrenheit Value\n",
         "value = int(input('Enter the celsius value that you want to predict of its fahrenheit value: '))\n",
         "\n",
+        "#Comparison Between Predicted Value and Actual Value\n",
         "print(f'Predicted Fahrenheit Value: {model.predict([value])}')\n",
         "print(f'Actual Fahrenheit Value: {Calculation(value)}')"
       ],
@@ -144,6 +140,7 @@
         "outputId": "e96b98e5-dfeb-4b08-df41-79d5b85d8ab7"
       },
       "source": [
+        "#To See the Components of Neural Network's Equation\n",
         "model.weights"
       ],
       "execution_count": 8,
